# serialreader

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  readerthread.cpp  readerthread.h  serialreader.qrc  serialreader.rc
